# janus-uae

./: .gitignore  README.md  configure.in  disk.cpp  mmakefile.src  ncr_scsi.cpp
PUAE/: CHANGES  README  beta_.sh  bootstrap.sh  build_macos_cocoa_aros.sh  build_macos_qt.sh  build_macos_xcode.sh  config.sub  configure.ac  release_.sh
PUAE/android/: README
PUAE/debian/: README  README.Debian  changelog  menu  p-uae.1  prerm  rules  watch
PUAE/docs/: bsdsocket.txt  cmd-line.txt  compiling.txt  configuration.txt  joystick.txt  keyboard.txt
PUAE/src/: Makefile.am  a2065.c  akiko.c  ar.c  audio.c  blkdev.c  calc.c  (+41 more)
amiga/: Makefile
aros/: mmakefile.src
include/: cpummu.h  filesys.h  xwin.h
janus-uae/: Makefile  Makefile.in  aclocal.m4  configure  configure.in  fixMakefiles
janus-uae/src/gfx-amigaos/: Makefile.am  Makefile.in  ami-events.c  ami-win.c  ami.h
janus-uae/src/gui-gtk/: Makefile.am  Makefile.in  chipsetspeedpanel.c  cpuspeedpanel.c  cputypepanel.c  cputypepanel.h  display.c  display.h  gtkui.c  integration.c  integration.h  led.c  splash.c  util.c
janus-uae/src/od-amiga/: Makefile.am  Makefile.in  bsdsock.c  j-bsdsocket-thread.c  j-cli-thread.c  j-clipboard.c  j-clipboard.h  j-custom-screen-thread.c  j-debug.c  j-dispatch.c  j-global.c  j-launch-thread.c  j-launch.c  j-menu.c  j-mouse.c  j-protect.c  j-reset.c  j-screen-thread.c  j-screen.c  j-splash-thread.c  j-splash.c  j-win-thread-gadgets.c  j-win-thread.c  j-win.c  j.h  main.c  serial.c
jit/: gencomp.cpp
od-win32/: dxwrap.h  rp.cpp  rp.h
src/: a2065.cpp  a2091.cpp  adide.cpp  aroswin.c  audio.cpp  autoconf.cpp  blitter.cpp  blkdev.cpp  blkdev_cdimage.cpp  build68k.cpp  cdtv.cpp  cdtvcr.cpp  cfgfile.cpp  cia.cpp  cia2.cpp  cpummu.cpp  custom.c  custom.cpp  debug.cpp  devices.cpp  disk.cpp  epsonprinter.cpp  ethernet.cpp  expansion.cpp  filesys.asm  filesys.cpp  fpp.cpp  fsusage.cpp  gencpu.oli.cpp  gfxboard.cpp  hardfile.cpp  inputdevice.cpp  inputrecord.cpp  main.c  main.cpp  memory.cpp  missing.cpp  mmakefile.src  newcpu.cpp  newcpu_common.cpp  (+14 more)
(+1620 files in other folders)
