INCLUDES =  -I$(top_srcdir)/src/include -I$(top_builddir)/src -I$(top_srcdir)/src -I$(top_srcdir) -I/usr/local/amiga/i686-aros/include/glib-2.0/glib -I/usr/local/amiga/i686-aros/include/glib-2.0 -I/usr/local/amiga/i686-aros/lib/glib-2.0/include

noinst_LIBRARIES = libgfxdep.a

libgfxdep_a_SOURCES = ami-win.c ami-mouse.c ami-events.c ami-appw.c 

noinst_HEADERS = gfx.h ami.h
