INCLUDES =  -I$(top_srcdir)/src/include -I$(top_builddir)/src -I$(top_srcdir)/src -I$(top_srcdir) -I/usr/local/aros/include -I/usr/local/aros/include/glib-2.0/glib -I/usr/local/aros/include/glib-2.0

noinst_LIBRARIES = libgfxdep.a

libgfxdep_a_SOURCES = ami-win.c ami-mouse.c ami-events.c ami-appw.c 

noinst_HEADERS = gfx.h ami.h
