INCLUDES =  -I$(top_srcdir)/src/include -I$(top_builddir)/src -I$(top_srcdir)/src -I$(top_srcdir)

noinst_LIBRARIES = libosdep.a

libosdep_a_SOURCES = main.c memory.c support.c ami-disk.c blkdev-amiga.c j-dispatch.c j-screen.c j-win.c j-global.c j-screen-thread.c j-custom-screen-thread.c j-win-thread.c j-menu.c j-clipboard.c j-mouse.c j-debug.c j-launch.c j-launch-thread.c 

noinst_HEADERS = amiga-kludges.h memory.h hrtimer.h j.h

dist_noinst_SCRIPTS = 
